# battleship-tcp-rs

./: Cargo.toml  README.md
client/: Cargo.toml  board.txt
client/src/: main.rs  utils.rs
server/: .env.example  Cargo.toml
server/src/: game.rs  main.rs  manager.rs  multicast_discovery.rs  session.rs
shared/: Cargo.toml
shared/src/: lib.rs
