[package]
name = "server"
version = "0.1.0"
edition = "2021"

[features]
daemonize = []

[dependencies]
async-std = "1.12.0"
async-stream = "0.3.5"
dotenv = "0.15.0"
futures = "0.3.28"
log = "0.4.19"
pretty_env_logger = "0.5.0"
shared = { path = "../shared" }
uuid = { version = "1.3.3", features = ["v4"] }

[target.'cfg(target_os = "linux")'.dependencies]
daemonize = "0.5.0"
syslog = "6.1.0"
